# TrustedInstallerElevation

./: CMakeLists.txt  InputUtils.h  README.md  TrustedInstaller_Shell.ps1  main.cpp
